[tool.poetry]
name = "belfast"
version = "0.1.0"
description = ""
authors = ["Belfast Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
google-cloud-aiplatform = "^1.46.0"
protobuf = "^4.25.1"
boto3 = "^1.33.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
